fix break in sub-list stacking with bullets

--- a/css/shanti-main-shanti_sarvaka_texts.css
+++ b/css/shanti-main-shanti_sarvaka_texts.css
@@ -180,7 +180,7 @@
 .view-text-search h3 a::before{ background:#fff; color: transparent;font-family: 'shanticon';content: '\e625';font-size: 1.06em;float: left;position: relative; top: 0.5rem;border-radius: 50%;background-clip: padding-box; width: 7px;height: 7px;display: inline-block;margin:0 9px 0 0; -webkit-box-shadow: 0 0 2px 1px rgba(0,0,0,0.2700);box-shadow: 0 0 2px 1px rgba(0,0,0,0.2700);border-collapse: separate;} 
 .view-text-search h3 a:hover::before{ background:#aaa !important; -webkit-box-shadow:none;box-shadow:none;}
 .view-text-search h3 a:active::before{ background:#fff; -webkit-box-shadow: 0 0 2px 1px rgba(0,0,0,0.2700);box-shadow: 0 0 2px 1px rgba(0,0,0,0.2700);}
-.view-text-search h3 ~ div{ padding-left:3rem; font-family:'Helvetica Neue',helvetica,arial,sans-serif;}
+.view-text-search h3 ~ div{ padding-left:3rem; font-family:'Helvetica Neue',helvetica,arial,sans-serif;white-space:nowrap;}
 .view-text-search h3 ~ div::before{ font-family: 'FontAwesome';position: relative;top: 0.5rem;margin-right:.7rem;float: left;content: "\f111";font-size:.38em;color:#888;}
 .view-text-search h3 + div,
 .view-text-search h3 + div a,
